[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/level1WaveBased/wave.gd" type="Script" id=1]
[ext_resource path="res://levels/level1WaveBased/DiveZoneExtents.gd" type="Script" id=2]

[node name="Wave" type="Node2D"]
script = ExtResource( 1 )

[node name="viewport_hint" type="Polygon2D" parent="."]
visible = false
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -320, -180, -320, 180, 320, 180, 320, -180 )

[node name="GruntFormationPoints" type="Node2D" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="A" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 45, -61 )

[node name="B" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 39, -104 )

[node name="C" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 40, -144 )

[node name="D" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 124, -130 )

[node name="E" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 105, -90 )

[node name="F" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 102, -49 )

[node name="G" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 36, 101 )

[node name="H" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 40, 42 )

[node name="I" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 51, -11 )

[node name="J" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 110, 24 )

[node name="K" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 116, 86 )

[node name="L" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 145, 143 )

[node name="M" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 63, 142 )

[node name="HeavyFomationPoints" type="Node2D" parent="."]
modulate = Color( 0, 1, 0.180392, 1 )

[node name="Position2D" type="Position2D" parent="HeavyFomationPoints"]
position = Vector2( 207, -127 )
__meta__ = {
"_gizmo_extents_": 15.0
}

[node name="Position2D2" type="Position2D" parent="HeavyFomationPoints"]
position = Vector2( 207, -51 )
__meta__ = {
"_gizmo_extents_": 15.0
}

[node name="Position2D3" type="Position2D" parent="HeavyFomationPoints"]
position = Vector2( 208, 32 )
__meta__ = {
"_gizmo_extents_": 15.0
}

[node name="Position2D4" type="Position2D" parent="HeavyFomationPoints"]
position = Vector2( 205, 104 )
__meta__ = {
"_gizmo_extents_": 15.0
}

[node name="DiveZoneExtents" type="Node2D" parent="."]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( -297, -168 )
BottomRight = Vector2( -70, 181 )

[node name="TopLeft" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -297, -168 )

[node name="BottomRight" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -70, 181 )

[node name="Spawners" type="Node2D" parent="."]
modulate = Color( 0.992157, 0.0823529, 1, 1 )

[node name="Position2D" type="Position2D" parent="Spawners"]
position = Vector2( 305, -168 )

[node name="Position2D2" type="Position2D" parent="Spawners"]
position = Vector2( 301, -1 )

[node name="Position2D3" type="Position2D" parent="Spawners"]
position = Vector2( 168, 0 )

[node name="Position2D4" type="Position2D" parent="Spawners"]
position = Vector2( 300, 166 )

[node name="EnemyDump" type="Node2D" parent="."]

[node name="BulletsDump" type="Node2D" parent="."]
